generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  username  String   @unique
  password  String   
  firstName String   
  lastName  String 
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
